--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <meta name="robots" content="index, follow" />
   <link href="assets/imgs/logo.jpeg" rel="apple-touch-icon">
   <link rel="icon" href="assets/imgs/logo.jpeg">
-  <meta property="og:image" content="https://narendrabrahmakshatriya.com/assets/imgs/logo.png">
+  <meta property="og:image" content="https://narendrabrahmakshatriya.com/assets/imgs/logo.jpeg">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="1024">
   <meta property="og:image:height" content="1024">
